# ProHQinUPC

./: .gitignore  .pre-commit-config.yaml  README.md  meson.build
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
include/: Color.hpp  Consts.hpp  Flags.hpp  IntegrationKernel.h  IntegrationMeta.hpp  KinematicVars.hpp  PhasespacePoint.h  PhasespaceValues.hpp  ProHQinUPC.h  config.h  histT.hpp  meson.build
include/gslpp/: gslpp.Histogram.hpp
py/: plot.py
src/: Integration.hpp  IntegrationKernel.cpp  ME.h  PhasespacePoint.cpp  ProHQinUPC.cpp  main.cpp  meson.build
src/ME/: A1.c  A1.cpp  A2.c  A2.cpp  A3.c  A3.cpp  BQED.c  BQED.cpp  RCounterX.cpp  RCounterXYm.cpp  RCounterYm.cpp  ROK.c  ROK.cpp  RQED.c  RQED.cpp
